Fixed animation for across all browsers, attempt at fixing z-index lag on safari for home page, image optimization on homepage

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -14,50 +14,50 @@
 
 	@-webkit-keyframes bounce {
 		0%, 20%, 50%, 80%, 100% {
-	     transform: translateY(0);
+	     -webkit-transform: translateY(0);
 	  }
 		40% {
-	     transform: translateY(-30px);
+	     -webkit-transform: translateY(-30px);
 	  }
 		60% {
-	     transform: translateY(-15px);
+	     -webkit-transform: translateY(-15px);
 	  }
 	}
 
 	@-moz-keyframes bounce {
 		0%, 20%, 50%, 80%, 100% {
-	     transform: translateY(0);
+	     -moz-transform: translateY(0);
 	  }
 		40% {
-	     transform: translateY(-30px);
+	     -moz-transform: translateY(-30px);
 	  }
 		60% {
-	     transform: translateY(-15px);
+	     -moz-transform: translateY(-15px);
 	  }
 	}
 
 	@-o-keyframes bounce {
 		0%, 20%, 50%, 80%, 100% {
-	     transform: translateY(0);
+	     -o-transform: translateY(0);
 	  }
 		40% {
-	     transform: translateY(-30px);
+	     -o-transform: translateY(-30px);
 	  }
 		60% {
-	     transform: translateY(-15px);
+	     -o-transform: translateY(-15px);
 	  }
 	}
 
 	@-ms-keyframes bounce {
-			0%, 20%, 50%, 80%, 100% {
-		     transform: translateY(0);
-		  }
-			40% {
-		     transform: translateY(-30px);
-		  }
-			60% {
-		     transform: translateY(-15px);
-		  }
+		0%, 20%, 50%, 80%, 100% {
+	     -ms-transform: translateY(0);
+	  }
+		40% {
+	     -ms-transform: translateY(-30px);
+	  }
+		60% {
+	     -ms-transform: translateY(-15px);
+	  }
 	}
 }
 
