--- a/css/main.scss
+++ b/css/main.scss
@@ -135,6 +135,7 @@ header {
   	margin-top: -50px;
 
   	.arrow {
+  		@include bounce;
 	  	position: absolute;
 	  	bottom: 32px;
 	  	left: 44%;
@@ -147,6 +148,9 @@ header {
 	.bounce {
 		@include bounce;
 		animation: bounce 2s infinite;
+		-webkit-animation: bounce 2s infinite;
+		-moz-animation: bounce 2s infinite;
+		-o-animation: bounce 2s infinite;
 	}
 }
 
@@ -441,7 +445,7 @@ header {
 				background: linear-gradient(
 			      rgba(0, 0, 0, 0.01),
 			      rgba(0, 0, 0, 0.2)
-			    ), url(../images/two.jpg) center center no-repeat;
+			    ), url(../images/backyard.jpg) center center no-repeat;
 				background-size: cover;
 				width: 100%;
 				height: 100vh;
@@ -457,7 +461,7 @@ header {
 				background: linear-gradient(
 			      rgba(0, 0, 0, 0.05),
 			      rgba(0, 0, 0, 0.31)
-			    ), url(../images/kind.jpg) center center no-repeat;
+			    ), url(../images/kindness_project.jpg) center center no-repeat;
 				background-size: cover;
 				width: 100%;
 				height: 100vh;
@@ -473,7 +477,7 @@ header {
 				background: linear-gradient(
 			      rgba(0, 0, 0, 0.05),
 			      rgba(0, 0, 0, 0.0)
-			    ), url(../images/piet1.jpg) center center no-repeat;
+			    ), url(../images/css_zen_garden.jpg) center center no-repeat;
 				background-size: cover;
 				width: 100%;
 				height: 100vh;
@@ -489,7 +493,7 @@ header {
 				background: linear-gradient(
 			      rgba(0, 0, 0, 0.5),
 			      rgba(0, 0, 0, 0.2)
-			    ), url(../images/good2.jpg) center center no-repeat;
+			    ), url(../images/goodreads.jpg) center center no-repeat;
 				background-size: cover;
 				width: 100%;
 				height: 100vh;
@@ -699,7 +703,7 @@ footer {
 	}
 
 	.banner {
-		z-index: 80;
+		z-index: 10;
 		background-color: $cream;
 
 		.banner-image {
@@ -810,26 +814,9 @@ footer {
 			width: 50%;
 			float: left;
 			min-height: 200px;
-			// clear: right;
-
-		// .backyard-art, .kindness-project, .css-zen-garden, .goodreads {
-		// 	width: 50%;
-		// 	float: right;
-		// 	// overflow: hidden;
-		// 	clear: right;
-			
-		// }
-
-		// .kindness-project {
-		// 	h1 {
-		// 		margin-top: -450px;
-		// 	}
-		// }
+			z-index: 10;
+		}
 	}
-
-		
-	}
-	
 	
 
 	#footer {
@@ -839,7 +826,5 @@ footer {
 		height: 45px;
 		position: relative;	
 	}
-
-
 }
 
